# wasm-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.js  package-lock.json  package.json
public/: app.wasm.js  app.wasm.wasm  bindings.js  index.html  main.html
src/: main.cpp
